Update required fields to no preset variable to force entry. Added list of possible values for fields.

--- a/letsencrypt/config.json
+++ b/letsencrypt/config.json
@@ -12,11 +12,11 @@
             },
   "map": ["ssl:rw"],
   "options": {
-    "email": "your@email.com",
-    "domains": ["your.domain"],
+    "email": null,
+    "domains": [null],
     "certfile": "fullchain.pem",
     "keyfile": "privkey.pem",
-    "challenge": "http",
+    "challenge": null,
     "dnsprovider": "",
     "dns_cloudflare_email": "your@email.com",
     "dns_cloudflare_api_key": "",
@@ -52,8 +52,8 @@
     "domains": ["str"],
     "certfile": "str",
     "keyfile": "str",
-    "challenge": "str",
-    "dnsprovider": "str",
+    "challenge": "list(dns|http)",
+    "dnsprovider": "list(dns-cloudflare|dns-cloudxns|dns-digitalocean|dns-dnsimple|dns-dnsmadeeasy|dns-gehirn|dns-google|dns-linode|dns-luadns|dns-nsone|dns-ovh|dns-rfc2136|dns-route53|dns-sakuracloud)",
     "dns_cloudflare_email": "email",
     "dns_cloudflare_api_key": "str",
     "dns_cloudxns_api_key": "str",
