--- a/mosquitto/config.json
+++ b/mosquitto/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Mosquitto broker",
-  "version": "6.0",
+  "version": "5.1",
   "slug": "mosquitto",
   "description": "An Open Source MQTT broker",
   "url": "https://home-assistant.io/addons/mosquitto/",
@@ -26,7 +26,7 @@
     },
     "cafile": "cafile.pem",
     "certfile": "certfile.pem",
-    "keyfile": "privkey.pem",
+    "keyfile": "keyfile.pem",
     "require_certificate": false
   },
   "schema": {
