--- a/nginx_proxy/data/nginx.conf
+++ b/nginx_proxy/data/nginx.conf
@@ -13,7 +13,9 @@ http {
     }
     
     server_names_hash_bucket_size 64;
-
+	
+    #include /data/cloudflare.conf;
+	
     server {
         server_name _;
         listen [::]:80 default_server ipv6only=off;
