--- a/letsencrypt/config.json
+++ b/letsencrypt/config.json
@@ -8,7 +8,7 @@
   "startup": "once",
   "boot": "manual",
   "ports": {
-    "80/tcp": 80
+    "80/tcp": "Only needed for http challenge"
             },
   "map": ["ssl:rw"],
   "options": {
@@ -17,71 +17,75 @@
     "certfile": "fullchain.pem",
     "keyfile": "privkey.pem",
     "challenge": null,
-    "dnsprovider": "",
-    "dns_cloudflare_email": "your@email.com",
-    "dns_cloudflare_api_key": "",
-    "dns_cloudxns_api_key": "",
-    "dns_cloudxns_secret_key": "",
-    "dns_digitalocean_token": "",
-    "dns_dnsimple_token": "",
-    "dns_dnsmadeeasy_api_key": "",
-    "dns_dnsmadeeasy_secret_key": "",
-    "dns_gehirn_api_token": "",
-    "dns_gehirn_api_secret": "",
-    "dns_linode_key": "",
-    "dns_linode_version": "",
-    "dns_luadns_email": "your@email.com",
-    "dns_luadns_token": "",
-    "dns_nsone_api_key": "",
-    "dns_ovh_endpoint": "",
-    "dns_ovh_application_key": "",
-    "dns_ovh_application_secret": "",
-    "dns_ovh_consumer_key": "",
-    "dns_rfc2136_server": "",
-    "dns_rfc2136_port": "",
-    "dns_rfc2136_name": "",
-    "dns_rfc2136_secret": "",
-    "dns_rfc2136_algorithm": "",
-    "aws_access_key_id": "",
-    "aws_secret_access_key": "",
-    "dns_sakuracloud_api_token": "",
-    "dns_sakuracloud_api_secret": ""
-  },
+    "dns": {
+        "provider": "",
+        "cloudflare_email": "",
+        "cloudflare_api_key": "",
+        "cloudxns_api_key": "",
+        "cloudxns_secret_key": "",
+        "digitalocean_token": "",
+        "dnsimple_token": "",
+        "dnsmadeeasy_api_key": "",
+        "dnsmadeeasy_secret_key": "",
+        "gehirn_api_token": "",
+        "gehirn_api_secret": "",
+        "linode_key": "",
+        "linode_version": "",
+        "luadns_email": "",
+        "luadns_token": "",
+        "nsone_api_key": "",
+        "ovh_endpoint": "",
+        "ovh_application_key": "",
+        "ovh_application_secret": "",
+        "ovh_consumer_key": "",
+        "rfc2136_server": "",
+        "rfc2136_port": "",
+        "rfc2136_name": "",
+        "rfc2136_secret": "",
+        "rfc2136_algorithm": "",
+        "aws_access_key_id": "",
+        "aws_secret_access_key": "",
+        "sakuracloud_api_token": "",
+        "sakuracloud_api_secret": "" 
+        }
+    },
   "schema": {
     "email": "email",
     "domains": ["str"],
     "certfile": "str",
     "keyfile": "str",
     "challenge": "list(dns|http)",
-    "dnsprovider": "list(dns-cloudflare|dns-cloudxns|dns-digitalocean|dns-dnsimple|dns-dnsmadeeasy|dns-gehirn|dns-google|dns-linode|dns-luadns|dns-nsone|dns-ovh|dns-rfc2136|dns-route53|dns-sakuracloud)",
-    "dns_cloudflare_email": "email",
-    "dns_cloudflare_api_key": "str",
-    "dns_cloudxns_api_key": "str",
-    "dns_cloudxns_secret_key": "str",
-    "dns_digitalocean_token": "str",
-    "dns_dnsimple_token": "str",
-    "dns_dnsmadeeasy_api_key": "str",
-    "dns_dnsmadeeasy_secret_key": "str",
-    "dns_gehirn_api_token": "str",
-    "dns_gehirn_api_secret": "str",
-    "dns_linode_key": "str",
-    "dns_linode_version": "str",
-    "dns_luadns_email": "email",
-    "dns_luadns_token": "str",
-    "dns_nsone_api_key": "str",
-    "dns_ovh_endpoint": "str",
-    "dns_ovh_application_key": "str",
-    "dns_ovh_application_secret": "str",
-    "dns_ovh_consumer_key": "str",
-    "dns_rfc2136_server": "str",
-    "dns_rfc2136_port": "str",
-    "dns_rfc2136_name": "str",
-    "dns_rfc2136_secret": "str",
-    "dns_rfc2136_algorithm": "str",
-    "aws_access_key_id": "str",
-    "aws_secret_access_key": "str",
-    "dns_sakuracloud_api_token": "str",
-    "dns_sakuracloud_api_secret": "str"
+    "dns": {
+        "provider": "list(dns-cloudflare|dns-cloudxns|dns-digitalocean|dns-dnsimple|dns-dnsmadeeasy|dns-gehirn|dns-google|dns-linode|dns-luadns|dns-nsone|dns-ovh|dns-rfc2136|dns-route53|dns-sakuracloud)",
+        "cloudflare_email": "email",
+        "cloudflare_api_key": "str",
+        "cloudxns_api_key": "str",
+        "cloudxns_secret_key": "str",
+        "digitalocean_token": "str",
+        "dnsimple_token": "str",
+        "dnsmadeeasy_api_key": "str",
+        "dnsmadeeasy_secret_key": "str",
+        "gehirn_api_token": "str",
+        "gehirn_api_secret": "str",
+        "linode_key": "str",
+        "linode_version": "str",
+        "luadns_email": "email",
+        "luadns_token": "str",
+        "nsone_api_key": "str",
+        "ovh_endpoint": "str",
+        "ovh_application_key": "str",
+        "ovh_application_secret": "str",
+        "ovh_consumer_key": "str",
+        "rfc2136_server": "str",
+        "rfc2136_port": "str",
+        "rfc2136_name": "str",
+        "rfc2136_secret": "str",
+        "rfc2136_algorithm": "str",
+        "aws_access_key_id": "str",
+        "aws_secret_access_key": "str",
+        "sakuracloud_api_token": "str",
+        "sakuracloud_api_secret": "str"
+        }
   },
   "image": "homeassistant/{arch}-addon-letsencrypt"
 }
