--- a/letsencrypt/config.json
+++ b/letsencrypt/config.json
@@ -8,46 +8,18 @@
   "startup": "once",
   "boot": "manual",
   "ports": {
-    "80/tcp": "Only needed for http challenge"
+    "80/tcp": 80
             },
+  "ports_description": {
+    "80/tcp": "Only needed for http challenge"
+    },
   "map": ["ssl:rw"],
   "options": {
     "email": null,
     "domains": [null],
     "certfile": "fullchain.pem",
     "keyfile": "privkey.pem",
-    "challenge": null,
-    "dns": {
-        "provider": "",
-        "cloudflare_email": "",
-        "cloudflare_api_key": "",
-        "cloudxns_api_key": "",
-        "cloudxns_secret_key": "",
-        "digitalocean_token": "",
-        "dnsimple_token": "",
-        "dnsmadeeasy_api_key": "",
-        "dnsmadeeasy_secret_key": "",
-        "gehirn_api_token": "",
-        "gehirn_api_secret": "",
-        "linode_key": "",
-        "linode_version": "",
-        "luadns_email": "",
-        "luadns_token": "",
-        "nsone_api_key": "",
-        "ovh_endpoint": "",
-        "ovh_application_key": "",
-        "ovh_application_secret": "",
-        "ovh_consumer_key": "",
-        "rfc2136_server": "",
-        "rfc2136_port": "",
-        "rfc2136_name": "",
-        "rfc2136_secret": "",
-        "rfc2136_algorithm": "",
-        "aws_access_key_id": "",
-        "aws_secret_access_key": "",
-        "sakuracloud_api_token": "",
-        "sakuracloud_api_secret": "" 
-        }
+    "challenge": null
     },
   "schema": {
     "email": "email",
@@ -56,35 +28,35 @@
     "keyfile": "str",
     "challenge": "list(dns|http)",
     "dns": {
-        "provider": "list(dns-cloudflare|dns-cloudxns|dns-digitalocean|dns-dnsimple|dns-dnsmadeeasy|dns-gehirn|dns-google|dns-linode|dns-luadns|dns-nsone|dns-ovh|dns-rfc2136|dns-route53|dns-sakuracloud)",
-        "cloudflare_email": "email",
-        "cloudflare_api_key": "str",
-        "cloudxns_api_key": "str",
-        "cloudxns_secret_key": "str",
-        "digitalocean_token": "str",
-        "dnsimple_token": "str",
-        "dnsmadeeasy_api_key": "str",
-        "dnsmadeeasy_secret_key": "str",
-        "gehirn_api_token": "str",
-        "gehirn_api_secret": "str",
-        "linode_key": "str",
-        "linode_version": "str",
-        "luadns_email": "email",
-        "luadns_token": "str",
-        "nsone_api_key": "str",
-        "ovh_endpoint": "str",
-        "ovh_application_key": "str",
-        "ovh_application_secret": "str",
-        "ovh_consumer_key": "str",
-        "rfc2136_server": "str",
-        "rfc2136_port": "str",
-        "rfc2136_name": "str",
-        "rfc2136_secret": "str",
-        "rfc2136_algorithm": "str",
-        "aws_access_key_id": "str",
-        "aws_secret_access_key": "str",
-        "sakuracloud_api_token": "str",
-        "sakuracloud_api_secret": "str"
+        "provider": "list(dns-cloudflare|dns-cloudxns|dns-digitalocean|dns-dnsimple|dns-dnsmadeeasy|dns-gehirn|dns-google|dns-linode|dns-luadns|dns-nsone|dns-ovh|dns-rfc2136|dns-route53|dns-sakuracloud)?",
+        "cloudflare_email": "email?",
+        "cloudflare_api_key": "str?",
+        "cloudxns_api_key": "str?",
+        "cloudxns_secret_key": "str?",
+        "digitalocean_token": "str?",
+        "dnsimple_token": "str?",
+        "dnsmadeeasy_api_key": "str?",
+        "dnsmadeeasy_secret_key": "str?",
+        "gehirn_api_token": "str?",
+        "gehirn_api_secret": "str?",
+        "linode_key": "str?",
+        "linode_version": "str?",
+        "luadns_email": "email?",
+        "luadns_token": "str?",
+        "nsone_api_key": "str?",
+        "ovh_endpoint": "str?",
+        "ovh_application_key": "str?",
+        "ovh_application_secret": "str?",
+        "ovh_consumer_key": "str?",
+        "rfc2136_server": "str?",
+        "rfc2136_port": "str?",
+        "rfc2136_name": "str?",
+        "rfc2136_secret": "str?",
+        "rfc2136_algorithm": "str?",
+        "aws_access_key_id": "str?",
+        "aws_secret_access_key": "str?",
+        "sakuracloud_api_token": "str?",
+        "sakuracloud_api_secret": "str?"
         }
   },
   "image": "homeassistant/{arch}-addon-letsencrypt"
