--- a/letsencrypt/azure-pipelines.yml
+++ b/letsencrypt/azure-pipelines.yml
@@ -16,7 +16,7 @@ variables:
 
 jobs:
 
-- job: '${{ parameters.addon }}'
+- job: 'letsencrypt'
   condition: eq(variables['Build.SourceBranchName'], 'master')
   pool:
     vmImage: 'ubuntu-16.04'
@@ -32,4 +32,4 @@ jobs:
         homeassistant/amd64-builder:$(versionBuilder) \
         --addon --all -t /data/letsencrypt \
         --docker-hub zapfmeister --docker-hub-check
-    displayName: 'Build ${{ parameters.addon }}'
+    displayName: 'Build letsencrypt'
