--- a/homematic/Dockerfile
+++ b/homematic/Dockerfile
@@ -17,7 +17,7 @@ ARG BUILD_ARCH
 
 # Install OCCU
 WORKDIR /usr/src
-RUN curl -SL https://github.com/eq-3/occu/archive/${OCCU_VERSION}.tar.gz | tar xzf - \
+RUN curl -SL https://github.com/jens-maus/occu/archive/${OCCU_VERSION}.tar.gz | tar xzf - \
     && cd occu-${OCCU_VERSION} \
     && mkdir -p /opt/hm \
     && mkdir -p /opt/hm/etc/config \
@@ -40,19 +40,29 @@ RUN curl -SL https://github.com/eq-3/occu/archive/${OCCU_VERSION}.tar.gz | tar x
     && cp -R packages-eQ-3/LinuxBasis/lib /opt/hm/ \
     && cp -R packages-eQ-3/HS485D/bin /opt/hm/ \
     && cp -R packages-eQ-3/HS485D/lib /opt/hm/ \
+    && rm -f packages-eQ-3/WebUI/bin/ReGa* \
+    && cp -R packages-eQ-3/WebUI/bin /opt/hm/ \
+    && cp -R packages-eQ-3/WebUI/lib /opt/hm/ \
+    && rm -rf packages-eQ-3/WebUI/etc/config* \
+    && cp -R packages-eQ-3/WebUI/etc/* /opt/hm/etc/ \
+    && cp -R packages-eQ-3/WebUI-Beta/bin /opt/hm/ \
+    && cp -R packages/lighttpd/bin /opt/hm/ \
+    && cp -R packages/lighttpd/lib /opt/hm/ \
+    && cp -R packages/lighttpd/etc/lighttpd /opt/hm/etc/ \
     && cd ../ \
     && cp -r firmware / \
-    && mv /firmware/HmIP-RFUSB/hmip_coprocessor_update.eq3 /firmware/HmIP-RFUSB/hmip_coprocessor_update-2.8.6.eq3 \
     && cp -R HMserver/opt/HmIP/* /opt/HmIP/ \
     && cp -a HMserver/opt/HMServer/HMIPServer.jar /opt/HMServer/ \
     && cp -R HMserver/opt/HMServer/groups /opt/HMServer/ \
     && cp -R HMserver/opt/HMServer/measurement /opt/HMServer/ \
     && cp -R HMserver/opt/HMServer/pages /opt/HMServer/ \
+    && cp -R WebUI / \
+    && ln -s /WebUI/www /opt/hm/www \
     && rm -rf /usr/src/occu-${OCCU_VERSION}
 ENV HM_HOME=/opt/hm LD_LIBRARY_PATH=/opt/hm/lib:${LD_LIBRARY_PATH}
 
 # Update config files
-COPY data/rfd.conf data/hs485d.conf data/crRFD.conf data/log4j.xml /etc/config/
+COPY data/rfd.conf data/hs485d.conf data/crRFD.conf data/log4j.xml /opt/hm/etc/config/
 
 # Setup start script
 COPY data/run.sh /
