--- a/letsencrypt/config.json
+++ b/letsencrypt/config.json
@@ -9,7 +9,7 @@
   "boot": "manual",
   "ports": {
     "80/tcp": 80
-            },
+  },
   "ports_description": {
     "80/tcp": "Only needed for http challenge"
     },
@@ -19,8 +19,8 @@
     "domains": [null],
     "certfile": "fullchain.pem",
     "keyfile": "privkey.pem",
-    "challenge": null
-    },
+    "challenge": "http"
+  },
   "schema": {
     "email": "email",
     "domains": ["str"],
@@ -28,36 +28,36 @@
     "keyfile": "str",
     "challenge": "list(dns|http)",
     "dns": {
-        "provider": "list(dns-cloudflare|dns-cloudxns|dns-digitalocean|dns-dnsimple|dns-dnsmadeeasy|dns-gehirn|dns-google|dns-linode|dns-luadns|dns-nsone|dns-ovh|dns-rfc2136|dns-route53|dns-sakuracloud)?",
-        "cloudflare_email": "email?",
-        "cloudflare_api_key": "str?",
-        "cloudxns_api_key": "str?",
-        "cloudxns_secret_key": "str?",
-        "digitalocean_token": "str?",
-        "dnsimple_token": "str?",
-        "dnsmadeeasy_api_key": "str?",
-        "dnsmadeeasy_secret_key": "str?",
-        "gehirn_api_token": "str?",
-        "gehirn_api_secret": "str?",
-        "linode_key": "str?",
-        "linode_version": "str?",
-        "luadns_email": "email?",
-        "luadns_token": "str?",
-        "nsone_api_key": "str?",
-        "ovh_endpoint": "str?",
-        "ovh_application_key": "str?",
-        "ovh_application_secret": "str?",
-        "ovh_consumer_key": "str?",
-        "rfc2136_server": "str?",
-        "rfc2136_port": "str?",
-        "rfc2136_name": "str?",
-        "rfc2136_secret": "str?",
-        "rfc2136_algorithm": "str?",
-        "aws_access_key_id": "str?",
-        "aws_secret_access_key": "str?",
-        "sakuracloud_api_token": "str?",
-        "sakuracloud_api_secret": "str?"
-        }
+      "provider": "list(dns-cloudflare|dns-cloudxns|dns-digitalocean|dns-dnsimple|dns-dnsmadeeasy|dns-gehirn|dns-google|dns-linode|dns-luadns|dns-nsone|dns-ovh|dns-rfc2136|dns-route53|dns-sakuracloud)?",
+      "cloudflare_email": "email?",
+      "cloudflare_api_key": "str?",
+      "cloudxns_api_key": "str?",
+      "cloudxns_secret_key": "str?",
+      "digitalocean_token": "str?",
+      "dnsimple_token": "str?",
+      "dnsmadeeasy_api_key": "str?",
+      "dnsmadeeasy_secret_key": "str?",
+      "gehirn_api_token": "str?",
+      "gehirn_api_secret": "str?",
+      "linode_key": "str?",
+      "linode_version": "str?",
+      "luadns_email": "email?",
+      "luadns_token": "str?",
+      "nsone_api_key": "str?",
+      "ovh_endpoint": "str?",
+      "ovh_application_key": "str?",
+      "ovh_application_secret": "str?",
+      "ovh_consumer_key": "str?",
+      "rfc2136_server": "str?",
+      "rfc2136_port": "str?",
+      "rfc2136_name": "str?",
+      "rfc2136_secret": "str?",
+      "rfc2136_algorithm": "str?",
+      "aws_access_key_id": "str?",
+      "aws_secret_access_key": "str?",
+      "sakuracloud_api_token": "str?",
+      "sakuracloud_api_secret": "str?"
+    }
   },
   "image": "homeassistant/{arch}-addon-letsencrypt"
 }
