--- a/homematic/config.json
+++ b/homematic/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "HomeMatic OCCU",
+  "name": "HomeMatic CCU",
   "version": "9.0",
   "slug": "homematic",
   "description": "HomeMatic central based on OCCU",
