--- a/homematic/config.json
+++ b/homematic/config.json
@@ -1,6 +1,6 @@
 {
-  "name": "HomeMatic OCCU",
-  "version": "8.3",
+  "name": "HomeMatic CCU",
+  "version": "9.0",
   "slug": "homematic",
   "description": "HomeMatic central based on OCCU",
   "url": "https://home-assistant.io/addons/homematic/",
@@ -11,12 +11,15 @@
   "auto_uart": true,
   "gpio": true,
   "apparmor": false,
+  "webui": "http://[HOST]:[PORT:80]/",
   "ports": {
+    "80/tcp": null,
     "2001/tcp": 2001,
     "2000/tcp": 2000,
     "2010/tcp": 2010
   },
   "ports_description": {
+    "80/tcp": "Regahss Webinterface",
     "2001/tcp": "Homematic xmlrpc",
     "2000/tcp": "HomematicWire xmlrpc",
     "2010/tcp": "HomematicIP xmlrpc"
