--- a/homematic/data/config/crRFD.conf
+++ b/homematic/data/config/crRFD.conf
@@ -1,6 +1,6 @@
 
 Config.Dir=/data/crRFD
-#Config.Include=hmip_user.conf
+Config.Include=/data/hmip_user.conf
 
 # Directory Configuration
 Persistence.Home=/data/crRFD
