--- a/homematic/Dockerfile
+++ b/homematic/Dockerfile
@@ -22,7 +22,6 @@ RUN curl -SL https://github.com/jens-maus/occu/archive/${OCCU_VERSION}.tar.gz | 
     && cd occu-${OCCU_VERSION} \
     && mkdir -p /opt/hm \
     && mkdir -p /opt/hm/etc/config \
-    && mkdir -p /opt/hm/etc/config/userprofiles \
     && mkdir -p /opt/HmIP \
     && mkdir -p /opt/HMServer \
     && mkdir -p /var/status \
@@ -67,6 +66,7 @@ RUN curl -SL https://github.com/jens-maus/occu/archive/${OCCU_VERSION}.tar.gz | 
     \
     && touch /opt/hm/etc/config/userAckSecurityHint \
     && touch /opt/hm/etc/config/firewallConfigured \
+    && touch /opt/hm/etc/config/legacyAPIMigrationAccepted \
     \
     && rm -rf /usr/src/occu-${OCCU_VERSION}
 
