Added DNS challenge support (#701)
* Added DNS challenge support

* Switch to prebuild pip3 certbot package. Update to python3.

* Code cleanup. Updates according to bashio variable guidelines.

* Update required fields to no preset variable to force entry. Added list of possible values for fields.

* Added README instructions

* Added missing linebreak

* Updates according to "ShellCheck".

* Further "ShellCheck" cleanup

* Added certbot dns plugin version

* Further "ShellCheck" corrections

* Further "ShellCheck" updates

* Update README.md

* Testing other linebreaks

* add .gitignore

* Cleanup

* > instead of >>

* Further cleanup and optimization for new UI features

* Added http port description

* Removed unnecessary info log entry

* Further optimization for UI

* setting optional settings. port_description fix.

* Update config.json

* Delete .gitignore

* Update config.json

* Update run.sh

* Update README.md

* Update README.md

--- a/letsencrypt/Dockerfile
+++ b/letsencrypt/Dockerfile
@@ -1,13 +1,28 @@
 ARG BUILD_FROM
 FROM $BUILD_FROM
 
-# Setup base
+# setup base
 ARG CERTBOT_VERSION
-RUN apk add --no-cache \
-        openssl libffi musl libstdc++ \
+
+RUN apk add --no-cache --update \
+        openssl libffi musl \
     && apk add --no-cache --virtual .build-dependencies \
         g++ musl-dev openssl-dev libffi-dev \
     && pip3 install --no-cache-dir certbot==${CERTBOT_VERSION} \
+        certbot-dns-cloudflare==${CERTBOT_VERSION} \
+        certbot-dns-cloudxns==${CERTBOT_VERSION} \
+        certbot-dns-digitalocean==${CERTBOT_VERSION} \
+        certbot-dns-dnsimple==${CERTBOT_VERSION} \
+        certbot-dns-dnsmadeeasy==${CERTBOT_VERSION} \
+        certbot-dns-gehirn==${CERTBOT_VERSION} \
+        certbot-dns-google==${CERTBOT_VERSION} \
+        certbot-dns-linode==${CERTBOT_VERSION} \
+        certbot-dns-luadns==${CERTBOT_VERSION} \
+        certbot-dns-nsone==${CERTBOT_VERSION} \
+        certbot-dns-ovh==${CERTBOT_VERSION} \
+        certbot-dns-rfc2136==${CERTBOT_VERSION} \
+        certbot-dns-route53==${CERTBOT_VERSION} \
+        certbot-dns-sakuracloud==${CERTBOT_VERSION} \
     && apk del .build-dependencies
 
 # Copy data
