--- a/letsencrypt/config.json
+++ b/letsencrypt/config.json
@@ -59,5 +59,5 @@
       "sakuracloud_api_secret": "str?"
     }
   },
-  "image": "zapfmeister/{arch}-addon-letsencrypt"
+  "image": "homeassistant/{arch}-addon-letsencrypt"
 }
