--- a/mosquitto/config.json
+++ b/mosquitto/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Mosquitto broker",
-  "version": "5.0",
+  "version": "5.1",
   "slug": "mosquitto",
   "description": "An Open Source MQTT broker",
   "url": "https://home-assistant.io/addons/mosquitto/",
@@ -25,7 +25,8 @@
       "folder": "mosquitto"
     },
     "certfile": "fullchain.pem",
-    "keyfile": "privkey.pem"
+    "keyfile": "privkey.pem",
+    "require_certificate": false
   },
   "schema": {
     "logins": [
@@ -36,8 +37,10 @@
       "active": "bool",
       "folder": "str"
     },
+    "cafile": "str?",
     "certfile": "str",
-    "keyfile": "str"
+    "keyfile": "str",
+    "require_certificate": "bool"
   },
   "image": "homeassistant/{arch}-addon-mosquitto"
 }
