Update google_assistant add-on to use Bashio #723

--- a/google_assistant/Dockerfile
+++ b/google_assistant/Dockerfile
@@ -9,18 +9,23 @@ RUN apt-get update \
         python3-pip \
         libportaudio2 \
         alsa-utils \
+    && apt-get update \
     && pip3 install --no-cache-dir --upgrade \
         setuptools==41.0.1 \
         pip==19.1 \
+    && apt-get update \
     && pip3 install --no-cache-dir \
         google-assistant-library==1.0.0 \
         google-assistant-sdk==0.5.0 \
         google-assistant-grpc==0.2.0 \
         google-auth==1.6.3 \
         requests_oauthlib==1.2.0 \
-        cherrypy==18.1.1 \
+        cherrypy==18.1.1 \
+    && apt-get update \
     && apt-get remove -y --purge python3-pip python3-dev \
+    && apt-get update \
     && apt-get clean -y \
+    && apt-get update \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy data
