bash_profile is now a list, updated README and CHANGELOG

--- a/ssh/config.json
+++ b/ssh/config.json
@@ -29,14 +29,16 @@
   "options": {
     "authorized_keys": [],
     "password": "",
-    "bash_profile": ""
+    "bash_profile": []
   },
   "schema": {
     "authorized_keys": [
       "str"
     ],
     "password": "str",
-    "bash_profile": "str"
+    "bash_profile": [
+      "str"
+    ]
   },
   "image": "homeassistant/{arch}-addon-ssh"
 }
