Made .bash_profile a persistent file, using sed to replace token if necessary

--- a/ssh/config.json
+++ b/ssh/config.json
@@ -29,16 +29,12 @@
   "options": {
     "authorized_keys": [],
     "password": "",
-    "bash_profile": []
   },
   "schema": {
     "authorized_keys": [
       "str"
     ],
-    "password": "str",
-    "bash_profile": [
-      "str"
-    ]
+    "password": "str"
   },
   "image": "homeassistant/{arch}-addon-ssh"
 }
