--- a/snips/Dockerfile
+++ b/snips/Dockerfile
@@ -27,18 +27,19 @@ RUN apt-get update \
             && apt-key adv --keyserver pgp.surfnet.nl --recv-keys D4F50CDCA10A2849; \
         fi
 
+ARG SNIPS_VERSION
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
-        snips-platform-voice=0.63.2 \
-        snips-asr=0.63.2 \
-        snips-injection=0.63.2 \
-        snips-watch=0.63.2 \
+        snips-platform-voice=${SNIPS_VERSION} \
+        snips-asr=${SNIPS_VERSION} \
+        snips-injection=${SNIPS_VERSION} \
+        snips-watch=${SNIPS_VERSION} \
         mosquitto \
-        snips-audio-server=0.63.2 \
-        snips-dialogue=0.63.2 \
-        snips-hotword=0.63.2 \
-        snips-nlu=0.63.2 \
-        snips-tts=0.63.2 \
+        snips-audio-server=${SNIPS_VERSION} \
+        snips-dialogue=${SNIPS_VERSION} \
+        snips-hotword=${SNIPS_VERSION} \
+        snips-nlu=${SNIPS_VERSION} \
+        snips-tts=${SNIPS_VERSION} \
     && rm -rf /var/lib/apt/lists/* \
     && curl -L -o /assistant_Hass_de.zip https://s3.amazonaws.com/hassio-addons-data/assistant_Hass_de.zip \
     && curl -L -o /assistant_Hass_en.zip https://s3.amazonaws.com/hassio-addons-data/assistant_Hass_en.zip \
