--- a/almond/Dockerfile
+++ b/almond/Dockerfile
@@ -8,6 +8,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
         libpcre2-dev \
         libpcre2-8-0 \
         pcre2-utils \
+        gnupg \
     \
     && curl -s https://deb.nodesource.com/gpgkey/nodesource.gpg.key | apt-key add - \
     && curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - \
