--- a/almond/Dockerfile
+++ b/almond/Dockerfile
@@ -4,20 +4,8 @@ FROM ${BUILD_FROM}
 # Install Alomond requirements
 RUN apt-get update && apt-get install -y --no-install-recommends \
         git \
-        software-properties-common \
-        libpcre2-dev \
-        libpcre2-8-0 \
-        pcre2-utils \
-        gnupg \
-    \
-    && curl -sS https://deb.nodesource.com/gpgkey/nodesource.gpg.key | apt-key add - \
-    && curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - \
-    && echo "deb https://deb.nodesource.com/node_12.x buster main" > /etc/apt/sources.list.d/nodesource.list \
-    && echo "deb https://dl.yarnpkg.com/debian/ stable main" > /etc/apt/sources.list.d/yarn.list \
-    \
-    && apt-get update && apt-get install -y --no-install-recommends \
         nodejs \
-        yarn \
+        yarnpkg \
     && rm -rf /var/lib/apt/lists/*
 
 
