--- a/almond/Dockerfile
+++ b/almond/Dockerfile
@@ -4,6 +4,9 @@ FROM ${BUILD_FROM}
 # Install Alomond requirements
 RUN apt-get update && apt-get install -y --no-install-recommends \
         git \
+        libpcre2-dev \
+        libpcre2-8-0 \
+        pcre2-utils \
         software-properties-common \
         gnupg \
     \
@@ -19,10 +22,10 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 
 # Install Almond
-ARG ALMOND_VERSION
+ARG ALMOND_COMMIT
 WORKDIR /opt/almond
 RUN git clone https://github.com/stanford-oval/almond-server . \
-    && git checkout ${ALMOND_VERSION} \
+    && git checkout ${ALMOND_COMMIT} \
     && rm -fr .git \
     && yarn \
     && rm -fr /root/.cache
