--- a/almond/config.json
+++ b/almond/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "Almond server",
+  "name": "Almond",
   "version": "0.1",
   "slug": "almond",
   "description": "The home server version of Almond",
