--- a/almond/data/nginx.conf
+++ b/almond/data/nginx.conf
@@ -57,4 +57,37 @@ http {
             proxy_set_header X-NginX-Proxy true;
         }
     }
+
+    # API
+    server {
+        listen 3001 default_server;
+        listen [::]:3001 default_server;
+
+        allow   172.30.32.1;
+        deny    all;
+
+        server_name _;
+        access_log /dev/stdout combined;
+
+        client_max_body_size 4G;
+        keepalive_timeout 5;
+
+        root /dev/null;
+
+        location / {
+            rewrite (.*) /%%BASE_URL%%/$1 break;
+            proxy_redirect off;
+            proxy_pass http://backend;
+
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Host $http_host;
+            proxy_set_header X-NginX-Proxy true;
+        }
+    }
 }
