--- a/almond/config.json
+++ b/almond/config.json
@@ -5,7 +5,7 @@
   "description": "The home server version of Almond",
   "url": "https://home-assistant.io/addons/almond/",
   "arch": ["armv7", "aarch64", "amd64"],
-  "startup": "application",
+  "startup": "system",
   "boot": "auto",
   "discovery": ["almond"],
   "ingress": true,
