--- a/almond/config.json
+++ b/almond/config.json
@@ -10,6 +10,7 @@
   "discovery": ["almond"],
   "ingress": true,
   "ingress_icon": "mdi:comment-eye-outline",
+  "homeassistant_api": true,
   "options": {
   },
   "schema": {
